--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <section>
             <h2>About Us</h2>
             <p>We are dedicated to reduce food waste.  Coming soon 🚀</p>
+            <h3>🖌️ App preview 📱</h3>
+            <p><a href="gallery.html" style="text-decoration: blue; color: blue;">View our app preview</a></p>
             <div class="team">
                 <h3>Meet Our Team</h3>
                 <div class="team-member" style="display: inline-block; margin-right: 20px;">
